@@ -1538,6 +1538,7 @@ if [ "${enable_portability}" != no ]; then
   XCFLAGS="$XCFLAGS -DNO_ALLOCA"
   XCFLAGS="$XCFLAGS -DNO_ADDRESS_SPACE_ASSUMPTIONS"
   XCFLAGS="$XCFLAGS -DNO_GENERATIONAL_GC"
+  XCFLAGS="$XCFLAGS -DNO_SYMBOLFLAGS"
 fi
 if [ "${with_unicode}" != no ]; then
   XCFLAGS="$XCFLAGS -DENABLE_UNICODE"
